# v3

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CNAME  EnvResolver.cs  Program.cs  README.md  Server.cs  VSCodeConfigHelper3.csproj  a.cmake  conanfile.txt  mac_user_guide.md  omnisharp.json  xmake.lua
.github/workflows/: cmake.yml  xmake.yml
configs/: app.manifest  config.h.in  resource.rc  resource.rc.in
cpp/: .gitignore  CMakeLists.txt  README.md  conanfile.txt  config.h.in
cpp/src/: cli.cpp  cli.h  env_resolver.cpp  env_resolver.h  environment.cpp  environment.h  generator.cpp  generator.h  logger.cpp  logger.h  main.cpp  native.cpp  native.h  resources.h  server.cpp  server.h
docs/: config.html  config.js  donate.html  index.html  mingw.json
pages/: config.html  config.js  donate.html  index.html  mingw.json
scripts/: check-ascii.ps1  get-folder.ps1  pause-console-launcher.sh  pause-console.ps1  pause-console.rb  pause-console.sh
src/: ConfGenerator.cs  EnvResolver.cs  Program.cs  Server.cs  cli.cpp  cli.h  cli_update.cpp  environment.cpp  environment.h  generator.cpp  generator.h  generator_analytics.cpp  generator_http.cpp  http_client.cpp  log.cpp  log.h  main.cpp  native.cpp  native.h  server.cpp  server.h
